2009-04-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.41

2009-04-17  Gordon Williams <gordon.williams@collabora.co.uk>

	Fix for crashes that happen on hildon-desktop exit.
	* src/launcher/hd-launcher-tile.c: Now destroy actors on dispose to
	  avoid problems with clutter destroying children before finalize.

2009-04-17  Gordon Williams <gordon.williams@collabora.co.uk>

	Fix for crashes that happen on hildon-desktop exit.

	* src/home/hd-scrollable-group.c: Fix segfault on exit caused by call
	to clutter_actor_get_size(0)
	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-tile.c: Checks for non-NULL before 
	  destroying actors.
	  
2009-04-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.40

	* src/home/hd-title-bar.c (hd_title_bar_init): Do not call
	clutter_label_set_use_markup until we know about the title text.
	(hd_title_bar_set_window): Use Pango markup only if the text has that.
	* src/mb/hd-decor.c (hd_decor_create_actors): Use Pango markup only if
	the text has that. Fixes: NB#108303

2009-04-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-transition.c (hd_transition_popup):
	  Don't be confused by fullscreen things and pop the bottom.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_should_be_portrait):
	  Removed an older condition that prevented fullscreen dialogs
	  from causing rotation.  As a consequence fullscreen dialogs
	  like the incoming call will be will be able to rotate not only
	  in home view but in app view.  This is in relation with NB#11111.
	  (no kidding i really own that bug)

2009-04-16  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Changed launcher to UI specs.
	Fixes: NB#109134, 111112

	* src/launcher/hd-launcher-tile.c: Use SmallSystemFont.
	* src/launcher/hd-launcher.c: Don't display title and icon for subpages.

2009-04-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-theme.c (construct_buttons): In case decor is not yet